# Data-Fetcher

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  backtest_results.json  cpcv_results.json  data_storage_strategy.md  docker-compose.yml  example.py  example_backtest.py  example_orchestrator.py  mkdocs.yml  my_strategy_guide.py  mypy.ini  pyproject.toml  pytest.ini  rate_limits.yml  report_test_run.json  requirements.txt  run_registry.db  run_tests.py  setup.cfg  steps.yaml  storage.yaml  technical_report.md  test.db  test_orchestrator_results.json  test_run_results.json  walk_forward_results.json  zxq_cli.py
backtesting/: engine.py  events.py  execution.py  orchestrator.py  performance.py  strategy.py
data_ingestion/: __init__.py  metrics.py
data_processing/: __init__.py  cross_validation.py  data_cleanser.py  data_handler.py  feature_engineer.py  missing_value_handler.py  pipeline.py  pipeline_step.py  staging.py  time_aligner.py
data_storage/: __init__.py  backend.py  catalog.py  duck_backend.py  hybrid.py  metadata.py  storage_backend.py
docs/: CHANGELOG.md  data_storage.md  getting_started.md  incremental_runner.md  index.md  monitoring.md  performance_validation.ipynb  phase3_validation.ipynb  report_demo.ipynb  strategy_manager.md  stress_test.md
great_expectations/: great_expectations.yml
metrics/: None_summary.json  __init__.py  local-run-dd66985a_summary.json  local-run-e109c99a_summary.json
monitoring/: alert_rules.yml  grafana_data_fetcher.json
pipelines/: catalog_drift.py  (+2 more)
(+142 files in other folders)
